--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
   font-family: para1;
   src: url(./L0x5DF4xlVMF-BfR8bXMIjhLq38.woff2);
 }
+@font-face {
+  font-family: para2;
+  src: url(./Poppins-Regular\ \(1\).ttf);
+}
 * {
   margin: 0;
   padding: 0;
@@ -20,6 +24,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  color: white;
 }
 
 body {
@@ -34,24 +39,28 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0rem;
-  padding: 1rem;
+  gap: 1.5rem;
   align-items: center;
 }
-main section {
+main section.view1 {
   width: 100%;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-main section .top {
+main section.view1 .top {
   width: 100%;
+  height: auto;
 }
-main section .top img {
+main section.view1 .top img {
   width: 100%;
   border-radius: 12px;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-main section .bottom {
+main section.view1 .bottom {
   border-radius: 0.7rem;
   background-color: rgb(29, 29, 29);
   color: rgb(208, 208, 208);
@@ -60,30 +69,30 @@ main section .bottom {
   gap: 3.7rem;
   padding: 1.8rem;
 }
-main section .bottom p {
+main section.view1 .bottom p {
   font-family: para1;
   font-weight: 500;
 }
-main section .bottom .text {
+main section.view1 .bottom .text {
   display: flex;
   flex-direction: column;
-  gap: 0.7rem;
+  gap: 1rem;
 }
-main section .bottom .text h1 {
+main section.view1 .bottom .text h1 {
   font-weight: 300;
   font-size: 2.4rem;
   text-transform: uppercase;
   font-family: title;
   line-height: 1.3;
 }
-main section .bottom .text p {
+main section.view1 .bottom .text p {
   line-height: 1.6;
   font-size: 1.35rem;
   color: gray;
   font-family: para;
   font-weight: bold;
 }
-main section .bottom .text a {
+main section.view1 .bottom .text a {
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -91,36 +100,219 @@ main section .bottom .text a {
   text-decoration: none;
   color: rgb(216, 215, 215);
 }
-main section .bottom .text a span {
+main section.view1 .bottom .text a span {
   font-family: para1;
   font-size: 0.9rem;
   font-weight: 600;
 }
-main section .bottom .text a i {
+main section.view1 .bottom .text a i {
   background-color: rgb(44, 43, 43);
   padding: 0.5rem;
   font-size: 1.3rem;
   border: 1px solid gray;
   border-radius: 50%;
 }
+main section.view2 {
+  display: flex;
+  flex-direction: column;
+  gap: 2.2rem;
+  padding: 1rem;
+  width: 100%;
+}
+main section.view2 .top, main section.view2 .bottom {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+main section.view2 .top .element, main section.view2 .bottom .element {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+  font-family: title;
+}
+main section.view2 .top .element small, main section.view2 .bottom .element small {
+  opacity: 0.8;
+  font-size: 0.8rem;
+}
+main section.view2 .top .element h2, main section.view2 .bottom .element h2 {
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+main section.view3 {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view3 .top {
+  width: 100%;
+  height: auto;
+}
+main section.view3 .top img {
+  width: 100%;
+  border-radius: 12px;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main section.view3 .bottom {
+  border-radius: 0.7rem;
+  background-color: rgb(29, 29, 29);
+  display: flex;
+  flex-direction: column;
+  gap: 3.7rem;
+  padding: 1.8rem;
+}
+main section.view3 .bottom p {
+  font-size: 1rem;
+  font-weight: 400;
+  font-family: para1;
+}
+main section.view3 .bottom .text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view3 .bottom .text h1 {
+  font-family: title;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 200;
+  color: rgb(211, 209, 209);
+}
+main section.view3 .bottom .text p {
+  line-height: 1.4;
+  font-size: 1rem;
+  color: gray;
+  font-family: para;
+  font-weight: bold;
+}
+main section.view4 {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view4 .top {
+  width: 100%;
+  height: auto;
+}
+main section.view4 .top img {
+  width: 100%;
+  border-radius: 12px;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main section.view4 .bottom {
+  border-radius: 0.7rem;
+  background-color: rgb(29, 29, 29);
+  display: flex;
+  flex-direction: column;
+  gap: 3.7rem;
+  padding: 1.8rem;
+}
+main section.view4 .bottom p {
+  font-size: 1rem;
+  font-weight: 400;
+  font-family: para1;
+}
+main section.view4 .bottom .text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view4 .bottom .text h1 {
+  font-family: title;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 200;
+  color: rgb(211, 209, 209);
+}
+main section.view4 .bottom .text p {
+  line-height: 1.4;
+  font-size: 1rem;
+  color: gray;
+  font-family: para;
+  font-weight: bold;
+}
+main section.view5 {
+  width: 100%;
+  padding: 1rem;
+}
+main section.view5 .card {
+  border-radius: 1rem;
+  background-image: url(./images/person1.png);
+  aspect-ratio: 1;
+  background-size: cover;
+}
+main section.view5 .card .top {
+  padding: 1rem;
+  background-color: red;
+}
 
 @media (min-width: 990px) {
-  main section {
+  main section.view1 {
     flex-direction: row;
   }
-  main section .top,
-  main section .bottom {
+  main section.view1 .top,
+  main section.view1 .bottom {
     width: 50%;
   }
-  main section .bottom {
+  main section.view1 .bottom {
     padding: 4rem;
     justify-content: space-between;
   }
-  main section .bottom .text {
-    gap: 1.7rem;
+  main section.view1 .bottom .text {
+    gap: 1rem;
   }
-  main section .bottom .text h1 {
-    font-size: 4rem;
+  main section.view1 .bottom .text h1 {
+    font-size: 3.7rem;
     line-height: 1.1;
+  }
+  main section.view2 {
+    flex-direction: row;
+  }
+  main section.view3 {
+    flex-direction: row-reverse;
+  }
+  main section.view3 .top, main section.view3 .bottom {
+    width: 50%;
+  }
+  main section.view3 .bottom {
+    padding: 4rem;
+    justify-content: space-between;
+  }
+  main section.view3 .bottom .paragraph {
+    display: flex;
+    gap: 2rem;
+  }
+  main section.view3 .bottom .paragraph p {
+    line-height: 1.7;
+    width: 50%;
+    font-size: 1.2rem;
+  }
+  main section.view4 {
+    flex-direction: row;
+    padding: 0 1rem;
+  }
+  main section.view4 .top, main section.view4 .bottom {
+    width: 50%;
+  }
+  main section.view4 .bottom {
+    padding: 4rem;
+    justify-content: space-between;
+  }
+  main section.view4 .bottom .paragraph {
+    display: flex;
+    gap: 2rem;
+  }
+  main section.view4 .bottom .paragraph p {
+    line-height: 1.7;
+    width: 50%;
+    font-size: 1.2rem;
   }
 }/*# sourceMappingURL=style.css.map */
