--- a/style.scss
+++ b/style.scss
@@ -2,14 +2,17 @@
   font-family: title;
   src: url(./63cffc0a3942456e003bc265_Chillax-Regular.woff);
 }
+
 @font-face {
   font-family: para;
   src: url(./63cffc20aa8997095067596f_Satoshi-Light.woff);
 }
+
 @font-face {
   font-family: para1;
   src: url(./L0x5DF4xlVMF-BfR8bXMIjhLq38.woff2);
 }
+
 @font-face {
   font-family: para2;
   src: url(./Poppins-Regular\ \(1\).ttf);
@@ -25,32 +28,34 @@ html,
 body {
   height: 100%;
   width: 100%;
- color: white;
+  color: white;
 }
 
 body {
   background-color: rgb(17, 17, 17);
 }
 
-@mixin flex-item($gap:0rem) {
+@mixin flex-item($gap: 0rem) {
   display: flex;
   flex-direction: column;
   gap: $gap;
 }
-section{
+
+section {
   max-width: 1600px;
 }
 
 main {
   width: 100%;
-  @include flex-item(1.5rem);
+  @include flex-item(0.5rem);
   align-items: center;
 
 
-  section.view1{
+  section.view1 {
     width: 100%;
     padding: 1rem;
     @include flex-item(1rem);
+
     .top {
       width: 100%;
       height: auto;
@@ -71,15 +76,15 @@ main {
       padding: 1.8rem;
 
 
-      p{
+      p {
         font-family: para1;
         font-weight: 500
       }
-      
+
 
 
       .text {
-       @include flex-item(1rem);
+        @include flex-item(1rem);
 
 
         h1 {
@@ -89,8 +94,8 @@ main {
           font-family: title;
           line-height: 1.3;
         }
-        
-        p{
+
+        p {
           line-height: 1.6;
           font-size: 1.35rem;
           color: gray;
@@ -98,27 +103,27 @@ main {
           font-weight: bold;
         }
 
-        
-        a{
-          display: flex
-;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 0.6rem;
-    text-decoration: none;
-    color: rgb(216, 215, 215);
 
-          
-          span{
+        a {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          gap: 0.6rem;
+          text-decoration: none;
+          color: rgb(216, 215, 215);
+
+
+          span {
             font-family: para1;
             font-size: 0.9rem;
             font-weight: 600;
           }
-          i{
+
+          i {
             background-color: rgb(44, 43, 43);
             padding: 0.5rem;
             font-size: 1.3rem;
-            
+
             border: 1px solid gray;
             border-radius: 50%;
           }
@@ -126,230 +131,494 @@ main {
       }
     }
   }
-  section.view2{
+
+  section.view2 {
     @include flex-item(2.2rem);
     padding: 1rem;
     width: 100%;
 
 
-    .top,.bottom{
+    .top,
+    .bottom {
       display: flex;
       width: 100%;
       justify-content: space-around;
-      
 
-      .element{
+
+      .element {
         text-align: center;
         @include flex-item(0.7rem);
         font-family: title;
 
-        small{
+        small {
           opacity: 0.8;
           font-size: 0.8rem;
         }
 
-        h2{
+        h2 {
           font-size: 2.5rem;
           font-weight: 700;
         }
       }
     }
   }
-  section.view3{
-      width: 100%;
-    padding: 1rem;
-    @include flex-item(1rem);
-    .top {
-      width: 100%;
-      height: auto;
 
-      img {
-        width: 100%;
-        border-radius: 12px;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-    .bottom{
-      border-radius: 0.7rem;
-      background-color: rgb(29, 29, 29);
-      @include flex-item(3.7rem);
-      padding: 1.8rem;
-      
-      p{
-        font-size: 1rem;
-        font-weight: 400;
-        font-family: para1;
-        
-      }
-
-      .text{
-        @include flex-item(1rem);
-
-
-        h1{
-          font-family: title;
-          text-transform: uppercase;
-          font-size: 2rem;
-          font-weight: 200;
-          color: rgb(211, 209, 209);
-        }
-
-        p{
-           line-height: 1.4;
-          font-size: 1rem;
-          color: gray;
-          font-family: para;
-          font-weight: bold;
-        }
-      }
-    }
-  }
-  section.view4{
-      width: 100%;
-    padding: 1rem;
-    @include flex-item(1rem);
-    .top {
-      width: 100%;
-      height: auto;
-
-      img {
-        width: 100%;
-        border-radius: 12px;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-    .bottom{
-      border-radius: 0.7rem;
-      background-color: rgb(29, 29, 29);
-      @include flex-item(3.7rem);
-      padding: 1.8rem;
-      
-      p{
-        font-size: 1rem;
-        font-weight: 400;
-        font-family: para1;
-        
-      }
-
-      .text{
-        @include flex-item(1rem);
-
-
-        h1{
-          font-family: title;
-          text-transform: uppercase;
-          font-size: 2rem;
-          font-weight: 200;
-          color: rgb(211, 209, 209);
-        }
-
-        p{
-           line-height: 1.4;
-          font-size: 1rem;
-          color: gray;
-          font-family: para;
-          font-weight: bold;
-        }
-      }
-    }
-  }
-  section.view5{
+  section.view3 {
     width: 100%;
     padding: 1rem;
-    .card{
-      border-radius:1rem ;
-      background-image: url(./images/person1.png);
-      aspect-ratio:1;
-      background-size: cover;
-    
+    @include flex-item(1rem);
 
-    .top{
-      padding: 1rem;
-      background-color: red;
+    .top {
+      width: 100%;
+      height: auto;
+
+      img {
+        width: 100%;
+        border-radius: 12px;
+        height: 100%;
+        object-fit: cover;
+      }
     }
-  }
-  }
-}
-@media(min-width:990px){
-  main{
-    
-    
-      section.view1{
-        
-        flex-direction: row;
-        .top,
-        .bottom{
-          width: 50%;
-        }
 
-          .bottom{
-            padding: 4rem;
-            justify-content: space-between;
+    .bottom {
+      border-radius: 0.7rem;
+      background-color: rgb(29, 29, 29);
+      @include flex-item(3.7rem);
+      padding: 1.8rem;
 
+      p {
+        font-size: 1rem;
+        font-weight: 400;
+        font-family: para1;
 
-            .text{
-              gap: 1rem;
-
-              h1{
-                font-size: 3.7rem;
-                line-height: 1.1;
-              }
-            }
-          }
-        }
-        section.view2{
-          flex-direction: row;
-        }
-          section.view3{
-           flex-direction: row-reverse;
-
-           .top,.bottom{
-            width: 50%;
-           }
-
-           .bottom{
-            padding: 4rem;
-            justify-content: space-between;
-
-            .paragraph{
-              display: flex;
-              gap:2rem;
-              
-              p{
-                line-height: 1.7;
-                width: 50%;
-                font-size: 1.2rem;
-              }
-            }
-           }
-          }
-          
-          section.view4{
-           flex-direction: row;
-            padding: 0 1rem;
-           .top,.bottom{
-            width: 50%;
-           }
-
-           .bottom{
-            padding: 4rem;
-            justify-content: space-between;
-
-            .paragraph{
-              display: flex;
-              gap:2rem;
-              
-              p{
-                line-height: 1.7;
-                width: 50%;
-                font-size: 1.2rem;
-              }
-            }
-           }
-          }
       }
 
+      .text {
+        @include flex-item(1rem);
+
+
+        h1 {
+          font-family: title;
+          text-transform: uppercase;
+          font-size: 2rem;
+          font-weight: 200;
+          color: rgb(211, 209, 209);
+        }
+
+        p {
+          line-height: 1.4;
+          font-size: 1rem;
+          color: gray;
+          font-family: para;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+
+  section.view4 {
+    width: 100%;
+    padding: 1rem;
+    @include flex-item(1rem);
+
+    .top {
+      width: 100%;
+      height: auto;
+
+      img {
+        width: 100%;
+        border-radius: 12px;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .bottom {
+      border-radius: 0.7rem;
+      background-color: rgb(29, 29, 29);
+      @include flex-item(3.7rem);
+      padding: 1.8rem;
+
+      p {
+        font-size: 1rem;
+        font-weight: 400;
+        font-family: para1;
+
+      }
+
+      .text {
+        @include flex-item(1rem);
+
+
+        h1 {
+          font-family: title;
+          text-transform: uppercase;
+          font-size: 2rem;
+          font-weight: 200;
+          color: rgb(211, 209, 209);
+        }
+
+        p {
+          line-height: 1.4;
+          font-size: 1rem;
+          color: gray;
+          font-family: para;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+
+  section.team {
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-start;
+
+
+    h1 {
+      font-family: title;
+      font-weight: 400;
+    }
+  }
+
+  section.view5 {
+    @include flex-item(2rem);
+    width: 100%;
+    padding: 1rem;
+
+    #card {
+      border-radius: 1rem;
+      width: 100%;
+      // background-image: url(./images/person1.png);
+      background-size: cover;
+      aspect-ratio: 1/1;
+
+      @include flex-item(0rem);
+      justify-content: space-between;
+      padding: 1.2rem;
+
+      .top {
+        display: flex;
+        gap: 1rem;
+        justify-content: flex-end;
+      }
+
+      .icon,
+      .bottom {
+
+        padding: 0.8rem;
+        border-radius: 0.7rem;
+        background-color: rgba(156, 151, 151, 0.432);
+        backdrop-filter: blur(5px);
+        border: 1px solid rgba(205, 199, 199, 0.497);
+      }
+
+      .icon {
+        border-radius: 50%;
+      }
+
+      .bottom {
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+        padding: 1.1rem 1rem;
+
+        h4 {
+          font-family: title;
+          font-size: 1.3rem;
+          font-weight: 400;
+          text-transform: uppercase;
+        }
+
+        p {
+          font-size: 1rem;
+          font-family: para1;
+        }
+      }
+    }
+
+    .card1 {
+      background-image: url(./images/person1.jpg);
+    }
+
+    .card2 {
+      background-image: url(./images/person3.jpg);
+    }
+
+    .card3 {
+      background-image: url(./images/person2.jpg);
+    }
 
   }
+
+  section.view6 {
+    width: 100%;
+    padding: 1rem;
+    @include flex-item(1rem);
+
+    .top {
+      width: 100%;
+      height: auto;
+
+      img {
+        width: 100%;
+        border-radius: 12px;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .bottom {
+      border-radius: 0.7rem;
+      background-color: rgb(29, 29, 29);
+      color: rgb(208, 208, 208);
+      @include flex-item(3.7rem);
+      padding: 1.8rem;
+
+
+      p {
+        font-family: para1;
+        font-weight: 500;
+        opacity: 0.8
+      }
+
+      .text {
+        @include flex-item(1.6rem);
+
+
+        h1 {
+          font-weight: 800;
+          font-size: 2rem;
+          text-transform: uppercase;
+          font-family: title;
+          line-height: 1.3;
+        }
+      }
+
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 0.6rem;
+        text-decoration: none;
+        color: rgb(216, 215, 215);
+
+
+        span {
+          font-family: para1;
+          font-size: 0.9rem;
+          font-weight: 600;
+        }
+
+        i {
+          background-color: rgb(44, 43, 43);
+          padding: 0.5rem;
+          font-size: 1.3rem;
+
+          border: 1px solid gray;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
+
+  section.view7 {
+    @include flex-item(1rem);
+    padding: 1rem;
+
+
+    .contact-card {
+      @include flex-item(2.1rem);
+      width: 100%;
+      padding: 1.8rem;
+      border-radius: 0.7rem;
+      background-color: rgb(206, 189, 99);
+
+      .top {
+        @include flex-item(0.8rem);
+        color: rgb(0, 0, 0);
+
+        P {
+          font-family: para1;
+          font-weight: 500;
+        }
+
+        h1 {
+          width: 100%;
+          font-family: title;
+          text-transform: uppercase;
+          font-size: 2.5rem;
+          font-weight: 500;
+          line-height: 1.2;
+        }
+      }
+
+      .bottom {
+
+        button {
+          width: 100%;
+          padding: 1rem;
+          background-color: black;
+          color: white;
+          border: none;
+          border-radius: 0.6rem;
+          font-family: para1;
+          font-size: 0.93rem;
+          font-weight: 300;
+          text-transform: uppercase;
+          word-spacing: 0.3rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          gap: 0.8rem;
+
+
+        }
+      }
+    }
+  }
+}
+
+//  Media Quries.......................................................................
+@media(min-width:990px) {
+  main {
+
+
+    section.view1 {
+
+      flex-direction: row;
+
+      .top,
+      .bottom {
+        width: 50%;
+      }
+
+      .bottom {
+        padding: 4rem;
+        justify-content: space-between;
+
+
+        .text {
+          gap: 1rem;
+
+          h1 {
+            font-size: 3.7rem;
+            line-height: 1.1;
+          }
+        }
+      }
+    }
+
+    section.view2 {
+      flex-direction: row;
+    }
+
+    section.view3 {
+      flex-direction: row-reverse;
+
+      .top,
+      .bottom {
+        width: 50%;
+      }
+
+      .bottom {
+        padding: 4rem;
+        justify-content: space-between;
+
+        .paragraph {
+          display: flex;
+          gap: 2rem;
+
+          p {
+            line-height: 1.7;
+            width: 50%;
+            font-size: 1.2rem;
+          }
+        }
+      }
+    }
+
+    section.view4 {
+      flex-direction: row;
+      padding: 0 1rem;
+
+      .top,
+      .bottom {
+        width: 50%;
+      }
+
+      .bottom {
+        padding: 4rem;
+        justify-content: space-between;
+
+        .paragraph {
+          display: flex;
+          gap: 2rem;
+
+          p {
+            line-height: 1.7;
+            width: 50%;
+            font-size: 1.2rem;
+          }
+        }
+      }
+    }
+
+    section.view5 {
+      flex-direction: row;
+
+      .card {
+        width: 30%;
+        aspect-ratio: 1/1.2;
+      }
+    }
+
+    section.view6 {
+      flex-direction: row;
+
+      .top,
+      .bottom {
+
+        width: 50%;
+        justify-content: space-between;
+      }
+
+      .bottom {
+        padding: 3rem;
+      }
+
+    }
+
+    section.view7 {
+      width: 100%;
+
+
+      .contact-card {
+        width: 100%;
+        padding: 3rem;
+        flex-direction: row;
+
+        .top {
+          width: 70%;
+
+          h1 {
+
+            font-size: 3.5rem;
+            line-height: 1.15;
+            font-weight: 600;
+          }
+        }
+
+        .bottom {
+          @include flex-item(0rem);
+          align-items: flex-end;
+          justify-content: flex-end;
+          flex-shrink: 2rem;
+        }
+      }
+    }
+  }
+
+
+}
